--- a/style.css
+++ b/style.css
@@ -1,33 +1,128 @@
-.top-rectangles{
-    flex-direction: row;
-    margin: 10px;
-   display: grid;
-   grid-template-rows:max-content;
-  
-   
-  
-   
-   
+*{
+    padding: 5px;
 }
 
+.clouds{
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
 
-
-.rec1{
-   background-color:blue;
+.one{
     width: 100px;
-    height: 50px;
+    height: 50px; 
+    background-color: rgb(64, 154, 228);
+  
     
-   
 }
-.rec2{
-    background-color:rgb(28, 107, 197);
-     width: 100px;
-     height: 50px;
-     
- }
- .rec3{
-    background-color:rgb(46, 88, 213);
-     width: 100px;
-     height: 50px;
-     ;
- }
+.two{
+    width: 100px;
+    height: 50px; 
+    background-color:  rgb(64, 154, 228);
+   }
+.three {
+    width: 100px;
+    height: 50px; 
+    background-color:  rgb(64, 154, 228);
+}
+.big {
+    width: 300;
+    height: 200px; 
+    background-color:  rgb(64, 154, 228);
+    margin: 15px;
+    position: relative;
+}
+.grass {
+    width: 100px%;
+    height: 20px; 
+    background-color:  rgb(64, 228, 97);
+    margin: 20px;
+}
+
+.decoration>.circle:nth-child(1){
+    left: 20vw;
+    top: 10vw;
+}
+.decoration>.circle:nth-child(2){
+    left: 10vw;
+    top: 10vw;
+    background-color: yellow;
+}
+.decoration>.circle:nth-child(3){
+    left: 20vw;
+    top: 30vw;
+    width: 15vw;
+    height: 15vw;
+}
+
+
+.circle{
+    border-radius: 1000px;
+    background-color: red;
+    width: 10vw;
+    height: 10vw;
+    position: absolute;
+
+}
+.tree{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    font-size: 23vw;
+    z-index: 1;
+}
+.tree2{
+    position: absolute;
+    right: 2vw;
+    bottom: 0;
+    font-size: 50vw;
+    
+}
+.person1{
+    position: absolute;
+    left: 10vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person2{
+    position: absolute;
+    left: 1vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person3{
+    position: absolute;
+    left: 20vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person4{
+    position: absolute;
+    left: 30vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person5{
+    position: absolute;
+    left: 40vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person6{
+    position: absolute;
+    left: 50vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person7{
+    position: absolute;
+    left: 60vw;
+    top: 50vw;
+    font-size: 10vw;
+}
+.person8{
+    position: absolute;
+    left: 70vw;
+    top: 50vw;
+    font-size: 10vw;
+}
